# surrealdb-graphql

./: Cargo.toml
src/: main.rs  mw_ctx.rs
src/graphql/: mutation_root.rs  query_root.rs
src/graphql/mutation_root/: tickets_mutation.rs
src/graphql/query_root/: tickets_query.rs
src/service/: ticket.rs
src/web/: routes_login.rs  routes_tickets.rs
